--- a/index.html
+++ b/index.html
@@ -309,5 +309,7 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/popper.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/navbar-fixed.js"></script>
+
 </body>
 </html>
